compiler/testData/diagnostics/tests/inference/kt11963.fir.kt
val <T : <!UNRESOLVED_REFERENCE!>KClass<T>.something<!>> abc